syntax = "proto3";

// Present as first gNMI update in all packets
message GnmiJuniperTelemetryHeader {
    // router name:export IP address
    string system_id                                        = 1;

    // line card / RE (slot number)
    uint32 component_id                                     = 2;

    // PFE (if applicable)
    uint32 sub_component_id				    = 3;

    // Path contains useful information on identiying which sensor,
    // resoruce string and producer the data corresponds to.
    // "internal_sensor_name:internal_path:external_path:component"
    // e.g.:
    // "sensor_1006:/junos/system/linecard/cpu/memory/:/junos/system/linecard/cpu/memory/:PFE" 
    string path                                             = 4;

    // Sequence number, monotonically increasing for each
    // system_id, component_id, sub_component_id + path.
    uint64 sequence_number                                  = 5;
}
